@@ -5,7 +5,7 @@ class dl_katfile_com extends Download
 
     public function CheckAcc($cookie)
     {
-        $data = $this->lib->curl("http://katfile.com/?op=my_account", "lang=english;{$cookie}", "");
+        $data = $this->lib->curl("https://katfile.com/?op=my_account", "lang=english;{$cookie}", "");
         if (stristr($data, 'Premium account expire')) {
             return array(true, "Until " . $this->lib->cut_str($data, '<TD>Premium account expire</TD><TD><b>', '</b>'));
         } else if (stristr($data, 'My affiliate link') && !stristr($data, 'Premium account expire')) {
@@ -13,14 +13,12 @@ class dl_katfile_com extends Download
         } else {
             return array(false, "accinvalid");
         }
-
     }
 
     public function Login($user, $pass)
     {
         $data = $this->lib->curl("https://katfile.com/", "lang=english", "op=login&login={$user}&password={$pass}&redirect=");
         $cookie = "lang=english;{$this->lib->GetCookies($data)}";
-
         return array(true, $cookie);
     }
 
@@ -37,7 +35,6 @@ class dl_katfile_com extends Download
             } elseif (preg_match('@https?:\/\/www\d+\.katfile.com\/d\/[^\'\"\s\t<>\r\n]+@i', $data, $link)) {
                 return trim(str_replace('https', 'http', $link[0]));
             }
-
         }
         if (stristr($data, 'type="password" name="password')) {
             $this->error("reportpass", true, false);
@@ -48,7 +45,7 @@ class dl_katfile_com extends Download
         } elseif (!$this->isRedirect($data)) {
             $this->error("Please enable direct download in katfile account", true, false, 2);
         } else {
-            return trim(str_replace('https', 'http', trim($this->redirect)));
+            return $this->redirect;
         }
 
         return false;
@@ -60,5 +57,5 @@ class dl_katfile_com extends Download
  * New Vinaget by LTT
  * Version: 3.3 LTS
  * Katfile.com Download Plugin
- * Date: 31.01.2018
+ * Date: 20.06.2020
  */
