@@ -5,51 +5,51 @@ class dl_nitroflare_com extends Download
 
     public function CheckAcc($cookie)
     {
-        $data = $this->lib->curl("https://nitroflare.com/member?s=premium", $cookie, "");
-        if (stristr($data, '<strong style="color: green;">Active</strong>')) {
-            return array(true, "Time Left: " . $this->lib->cut_str($data, '<label>Time Left</label><strong>', '</strong></div>') . "<br>" . $this->lib->cut_str($data, '<label>Your Daily Limit</label><strong>', '</strong></div>'));
-        } elseif (stristr($data, 'Inactive')) {
-            return array(false, "accfree");
-        } else {
-            return array(false, "accinvalid");
-        }
+        preg_match('/user=(.*?); pass=(.*?);/U', $cookie, $match);
+        list($user, $pass) = array($match[1], $match[2]);
 
+        $data = $this->lib->curl("https://nitroflare.com/api/v2/getKeyInfo?user={$user}&premiumKey={$pass}", "", "", 0);
+        $json = json_decode($data, true);
+        if ($json['type'] == 'success') {
+            if ($json['result']['expiryDate'] && $json['result']['trafficLeft']) {
+                return array(true, "Until " . $json['result']['expiryDate'] . "<br>Bandwidth Left: " . $this->lib->convertmb($json['result']['trafficLeft']) . " / " . $this->lib->convertmb($json['result']['trafficMax']));
+            }
+            return array(false, "accfree");
+        }
+        return array(false, "accinvalid");
     }
 
     public function Login($user, $pass)
     {
-        $page = $this->lib->curl("https://nitroflare.com/login", "", "");
-        $ck = $this->lib->GetCookies($page);
-        $token = $this->lib->cut_str($page, 'hidden" name="token" value="', '" />');
-        $data = $this->lib->curl("https://nitroflare.com/login", $ck, "email={$user}&password={$pass}&login=&token={$token}");
-        $cookie = $this->lib->GetCookies($data);
-
+        $cookie = "user={$user}; pass={$pass}";
         return array(true, $cookie);
     }
 
     public function Leech($url)
     {
+        preg_match('/user=(.*?); pass=(.*?);/', $this->lib->cookie, $match);
+        list($user, $pass) = array($match[1], $match[2]);
 
-        $url = str_replace(array("http://", "http://www.", "https://www."), "https://", $url);
+        preg_match('/view\/(.*?)\//', $url, $match);
+        $fileCode = trim($match[1]);
 
-        $data = $this->lib->curl($url, $this->lib->cookie, "");
+        $data = $this->lib->curl("https://nitroflare.com/api/v2/getDownloadLink?user={$user}&premiumKey={$pass}&file={$fileCode}", "", "", 0);
+        $json = json_decode($data, true);
 
-        if ((stristr($data, "This file has been removed due")) || (stristr($data, "File doesn't exist"))) {
-            $this->error("dead", true, false, 2);
-        } elseif ((stristr($data, "This download exceeds the daily download limit."))) {
-            $this->error("LimitAcc", true, false, 2);
+        if ($json['type'] == 'error') {
+            if (stristr($json['message'], "File doesn't exist")) {
+                $this->error("dead", true, false, 2);
+            } elseif (stristr($json['message'], "Captcha required")) {
+                $this->error("Nitroflare Captcha found. Please bypass captcha first -> <a target=\"blank\" href=\"https://nitroflare.com/api/v2/solveCaptcha?user={$user}\">Click here</a>", true, false);
+            } elseif (stristr($json['message'], "limit")) {
+                $this->error("LimitAcc", true, false, 2);
+            }
+        } elseif (isset($json['result']['url'])) {
+            return $json['result']['url'];
         }
 
-        if (!$this->isRedirect($data)) {
-            $this->save($this->lib->GetCookies($data));
-            return trim($this->lib->cut_str($data, 'id="download" href="', '">Click'));
-        } else {
-            $this->save($this->lib->GetCookies($data));
-            return trim($this->redirect);
-        }
         return false;
     }
-
 }
 
 /*
@@ -57,5 +57,5 @@ class dl_nitroflare_com extends Download
  * New Vinaget by LTT
  * Version: 3.3 LTS
  * Nitroflare.com Download Plugin
- * Date: 01.09.2018
+ * Date: 21.08.2020
  */
